Premier ajout projet sur git

--- a/app/src/main/res/layout/activity_general_menu.xml
+++ b/app/src/main/res/layout/activity_general_menu.xml
@@ -1,27 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_menu"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_general_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.emmaveillat.photoship.Menu">
-
-
-    <Button
-        android:text="Changer l'image en noir et blanc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/gris"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/couleur"
-        android:layout_alignEnd="@+id/couleur" />
+    tools:context="com.example.emmaveillat.finalproject.GeneralMenu">
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -58,15 +46,6 @@
         android:layout_alignTop="@+id/couleur"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_menu_info_details"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/aide_gris" />
 
     <Button
         android:text="Modifier la couleur, la luminosité et la saturation de l'image"
@@ -131,5 +110,27 @@
         android:layout_above="@+id/teinte"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_menu_info_details"
+        android:id="@+id/aide_gris"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/aide_couleur"
+        android:layout_alignStart="@+id/aide_couleur"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp" />
+
+    <Button
+        android:text="Changer l'image en noir et blanc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/gris"
+        android:layout_marginRight="90dp"
+        android:layout_marginEnd="90dp"
+        android:layout_alignBottom="@+id/aide_gris"
+        android:layout_toLeftOf="@+id/aide_couleur"
+        android:layout_toStartOf="@+id/aide_couleur" />
 
 </RelativeLayout>
