--- a/app/src/main/res/layout/activity_choice_menu.xml
+++ b/app/src/main/res/layout/activity_choice_menu.xml
@@ -1,34 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_menu_couleur"
+    android:id="@+id/activity_choice_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.emmaveillat.photoship.MenuCouleur">
-
-    <Button
-        android:text="Mettre en couleur !"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/couleur"
-        android:layout_above="@+id/reset"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <ImageView
-        android:id="@+id/picture"
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/couleur">
-    </ImageView>-->
+    tools:context="com.example.emmaveillat.finalproject.ChoiceMenu">
 
     <Button
         android:id="@+id/reset"
@@ -58,64 +38,54 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <ImageView
-        android:id="@+id/result"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:adjustViewBounds="true"
-        android:background="@android:color/background_light"
-        android:scaleType="centerInside"
-        android:layout_above="@+id/texthue"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <SeekBar
         android:id="@+id/huebar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:max="511"
-        android:progress="256"
-        android:layout_above="@+id/textsat"
+        android:max="360"
+        android:progress="0"
+        android:layout_above="@+id/textgap"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:id="@+id/textsat"
+        android:id="@+id/textgap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Saturation"
-        android:layout_above="@+id/satbar"
+        android:text="Gap"
+        android:layout_above="@+id/gapbar"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <SeekBar
-        android:id="@+id/satbar"
+        android:id="@+id/gapbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:max="511"
-        android:progress="256"
-        android:layout_above="@+id/textval"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <SeekBar
-        android:id="@+id/valbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:max="511"
-        android:progress="256"
+        android:max="180"
+        android:progress="0"
         android:layout_marginBottom="10dp"
         android:layout_above="@+id/save"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <TextView
-        android:id="@+id/textval"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Value"
-        android:layout_above="@+id/valbar"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/texthue"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="24dp">
+        <ImageView
+            android:id="@+id/result"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:background="@android:color/background_light"
+            android:scaleType="centerInside"
+            android:layout_above="@+id/texthue"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" >
+        </ImageView>
+    </ScrollView>
 
 </RelativeLayout>
