--- a/app/src/main/res/layout/activity_extension_dynamic.xml
+++ b/app/src/main/res/layout/activity_extension_dynamic.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_menu_sepia"
+    android:id="@+id/activity_extension_dynamic_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.emmaveillat.photoship.MenuSepia">
+    tools:context="com.example.emmaveillat.finalproject.ExtensionDynamic">
 
     <Button
         android:text="Annuler les modifications"
@@ -29,22 +29,31 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:text="Filtre sepia"
+        android:text="HE"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/sepia"
+        android:id="@+id/gris"
         android:layout_above="@+id/save"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <ImageView
-        android:id="@+id/picture"
-        android:layout_width="fill_parent"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_above="@+id/sepia"
+        android:layout_above="@+id/gris"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
-    </ImageView>
+        <ImageView
+            android:id="@+id/picture"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_above="@+id/gris"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="37dp">
+        </ImageView>
+    </ScrollView>
+
 
 </RelativeLayout>
