--- a/app/src/main/res/layout/activity_pinch_zoom_menu.xml
+++ b/app/src/main/res/layout/activity_pinch_zoom_menu.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_menu_pinch_zoom"
+    android:id="@+id/activity_pinch_zoom_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.emmaveillat.photoship.MenuPinchZoom">
+    tools:context="com.example.emmaveillat.finalproject.PinchZoomMenu">
 
-    <!--<TextView
-        android:id="@+id/pinchTitleText"
+    <TextView
+        android:text="Facteur de zoom :"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="pinch_title" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="33dp"
+        android:id="@+id/textView"/>
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_below="@+id/pinchTitleText"
-        android:scaleType="matrix"
-        android:maxHeight="100dp"
-        android:maxWidth="50dp" />-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/zoomfactor" />
+
 
     <ImageView
         android:id="@+id/imageview"
@@ -36,21 +40,4 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <TextView
-        android:text="Facteur de zoom :"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="33dp"
-        android:id="@+id/textView" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/zoomfactor" />
 </RelativeLayout>
