--- a/app/src/main/res/layout/activity_zoom_menu.xml
+++ b/app/src/main/res/layout/activity_zoom_menu.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_menu_zoom"
+    android:id="@+id/activity_zoom_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.emmaveillat.photoship.MenuZoom">
+    tools:context="com.example.emmaveillat.finalproject.ZoomMenu">
 
     <Button
         android:text="Annuler les modifications"
@@ -72,16 +72,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <ImageView
-        android:id="@+id/pictureZoom"
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_above="@+id/facY"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-    </ImageView>
-
     <Button
         android:text="Sauvegarder mon image"
         android:layout_width="match_parent"
@@ -90,5 +80,22 @@
         android:layout_above="@+id/reset"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/facY"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+        <ImageView
+            android:id="@+id/pictureZoom"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_above="@+id/facY"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+    </ImageView>
+    </ScrollView>
 
 </RelativeLayout>
