--- a/app/src/main/res/layout/activity_egalization_histogramm.xml
+++ b/app/src/main/res/layout/activity_egalization_histogramm.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_extension_dynamic_menu"
+    android:id="@+id/activity_egalization_histogramm"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.emmaveillat.finalproject.ExtensionDynamic">
+    tools:context="com.example.emmaveillat.finalproject.EgalizationHistogramm">
 
     <Button
         android:text="Annuler les modifications"
@@ -29,10 +29,10 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:text="Extension linéaire de dynamiques"
+        android:text="Égalisation d'histogramme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/ED"
+        android:id="@+id/HE"
         android:layout_above="@+id/save"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
