--- a/app/src/main/res/layout/activity_general_menu.xml
+++ b/app/src/main/res/layout/activity_general_menu.xml
@@ -54,7 +54,9 @@
         android:id="@+id/couleur"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/gris"/>
+        android:layout_below="@+id/gris"
+        android:layout_toLeftOf="@+id/aide_couleur"
+        android:layout_toStartOf="@+id/aide_couleur" />
 
     <Button
         android:text="Déformer l'image"
@@ -63,7 +65,9 @@
         android:id="@+id/ppv"
         android:layout_above="@+id/pinch"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/aide_ppv"
+        android:layout_toStartOf="@+id/aide_ppv" />
 
     <Button
         android:text="Voir l'image plus en détail (pinch zoom)"
@@ -73,7 +77,9 @@
         android:layout_marginBottom="13dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/aide_ppv"
+        android:layout_toStartOf="@+id/aide_ppv" />
 
     <Button
         android:text="Mettre un filtre de couleur aléatoire sur l'image"
@@ -82,13 +88,16 @@
         android:id="@+id/filtre"
         android:layout_above="@+id/aide_ppv"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/aide_ppv"
+        android:layout_toStartOf="@+id/aide_ppv" />
 
     <Button
-        android:text="Extension linéaire de dynamiques"
+        android:text="Extension linéaire de dynamique"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ED"
+        android:layout_below="@+id/teinte"
         android:layout_above="@+id/aide_filtre"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -99,6 +108,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/sepia"
         android:layout_above="@+id/teinte"
+        android:layout_below="@+id/couleur"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -114,15 +124,14 @@
         android:layout_marginStart="10dp" />
 
     <Button
-        android:text="Changer l'image en noir et blanc"
-        android:layout_width="wrap_content"
+        android:text="Convolution"
         android:layout_height="wrap_content"
-        android:id="@+id/gris"
-        android:layout_marginRight="90dp"
-        android:layout_marginEnd="90dp"
-        android:layout_alignBottom="@+id/aide_gris"
-        android:layout_toLeftOf="@+id/aide_couleur"
-        android:layout_toStartOf="@+id/aide_couleur" />
+        android:layout_width="wrap_content"
+        android:id="@+id/conv"
+        android:layout_toEndOf="@+id/sepia"
+        android:layout_toRightOf="@+id/sepia"
+        android:layout_below="@+id/couleur"
+        android:layout_above="@+id/teinte"/>
 
     <Button
         android:text="Choix teinte"
@@ -134,12 +143,23 @@
         android:layout_alignEnd="@+id/gris" />
 
     <Button
+        android:text="Changer l'image en noir et blanc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/gris"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/aide_gris"
+        android:layout_toStartOf="@+id/aide_gris"/>
+
+    <Button
         android:text="Égalisation d'histogramme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/HE"
-        android:layout_below="@+id/aide_couleur"
-        android:layout_toRightOf="@+id/teinte"
-        android:layout_toEndOf="@+id/teinte" />
-
+        android:layout_below="@+id/couleur"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/conv"
+        android:layout_toEndOf="@+id/conv" />
 </RelativeLayout>
