--- a/app/src/main/res/layout/activity_photo_loading.xml
+++ b/app/src/main/res/layout/activity_photo_loading.xml
@@ -14,7 +14,7 @@
         android:text="J'ai choisi mon image !"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="26dp"
+        android:layout_marginBottom="12dp"
         android:id="@+id/choice"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
@@ -41,11 +41,9 @@
         android:onClick="chargementImage"
         android:text="Chercher une image"
         android:layout_above="@+id/button1"
+        android:layout_marginBottom="12dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="20dp" />
+        android:layout_alignParentStart="true" />
 
     <ScrollView
         android:layout_width="match_parent"
