--- a/app/src/main/res/layout/activity_choice_menu.xml
+++ b/app/src/main/res/layout/activity_choice_menu.xml
@@ -73,8 +73,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/texthue"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="24dp">
+        android:layout_alignParentStart="true">
         <ImageView
             android:id="@+id/result"
             android:layout_width="match_parent"
