--- a/app/src/main/res/layout/activity_color_menu.xml
+++ b/app/src/main/res/layout/activity_color_menu.xml
@@ -14,7 +14,7 @@
         android:text="Mettre en couleur !"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/couleur"
+        android:id="@+id/color"
         android:layout_above="@+id/reset"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -30,7 +30,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_above="@+id/couleur">
+            android:layout_above="@+id/color">
         </ImageView>
     </ScrollView>
 
