--- a/app/src/main/res/layout/activity_convolution_menu.xml
+++ b/app/src/main/res/layout/activity_convolution_menu.xml
@@ -88,7 +88,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
+        android:layout_above="@+id/facX"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
         <ImageView
