--- a/app/src/main/res/layout/activity_extension_dynamic.xml
+++ b/app/src/main/res/layout/activity_extension_dynamic.xml
@@ -49,7 +49,7 @@
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_above="@+id/gris"
+            android:layout_above="@+id/grey"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="37dp">
