--- a/app/src/main/res/layout/activity_general_menu.xml
+++ b/app/src/main/res/layout/activity_general_menu.xml
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.emmaveillat.finalproject.GeneralMenu">
 
-    <ImageButton
+    <!--<ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_menu_info_details"
@@ -43,123 +43,138 @@
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_menu_info_details"
         android:id="@+id/aide_couleur"
-        android:layout_alignTop="@+id/couleur"
+        android:layout_alignTop="@+id/color"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true" />-->
 
-    <Button
-        android:text="Modifier la couleur, la luminosité et la saturation de l'image"
+    <!--android:layout_toLeftOf="@+id/aide_couleur"
+        android:layout_toStartOf="@+id/aide_couleur" -->
+
+    <!--android:layout_toLeftOf="@+id/aide_ppv"
+        android:layout_toStartOf="@+id/aide_ppv" -->
+
+    <!--android:layout_toLeftOf="@+id/aide_ppv"
+        android:layout_toStartOf="@+id/aide_ppv" -->
+
+    <!--android:layout_toLeftOf="@+id/aide_ppv"
+        android:layout_toStartOf="@+id/aide_ppv"
+        android:layout_above="@+id/aide_ppv"-->
+
+    <!--android:layout_above="@+id/aide_filtre"-->
+
+    <!--<ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/couleur"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/gris"
-        android:layout_toLeftOf="@+id/aide_couleur"
-        android:layout_toStartOf="@+id/aide_couleur" />
+        app:srcCompat="@android:drawable/ic_menu_info_details"
+        android:id="@+id/aide_gris"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_alignLeft="@+id/aide_couleur"
+        android:layout_alignStart="@+id/aide_couleur"/>-->
 
     <Button
-        android:text="Déformer l'image"
+        android:text="Changer l'image en noir et blanc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/ppv"
-        android:layout_above="@+id/pinch"
+        android:id="@+id/grey"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/aide_ppv"
-        android:layout_toStartOf="@+id/aide_ppv" />
+        android:layout_alignParentStart="true"/>
+        <!--android:layout_toLeftOf="@+id/aide_gris"
+        android:layout_toStartOf="@+id/aide_gris"-->
 
     <Button
         android:text="Voir l'image plus en détail (pinch zoom)"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/pinch"
-        android:layout_marginBottom="13dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/aide_ppv"
-        android:layout_toStartOf="@+id/aide_ppv" />
-
-    <Button
-        android:text="Mettre un filtre de couleur aléatoire sur l'image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/filtre"
-        android:layout_above="@+id/aide_ppv"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/aide_ppv"
-        android:layout_toStartOf="@+id/aide_ppv" />
+        android:layout_alignParentStart="true" />
 
     <Button
         android:text="Extension linéaire de dynamique"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ED"
-        android:layout_below="@+id/teinte"
-        android:layout_above="@+id/aide_filtre"
+        android:layout_above="@+id/ppv"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:text="Sépia"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/sepia"
-        android:layout_above="@+id/teinte"
-        android:layout_below="@+id/couleur"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_menu_info_details"
-        android:id="@+id/aide_gris"
-        android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/aide_couleur"
-        android:layout_alignStart="@+id/aide_couleur"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp" />
-
-    <Button
-        android:text="Convolution"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/conv"
-        android:layout_toEndOf="@+id/sepia"
-        android:layout_toRightOf="@+id/sepia"
-        android:layout_below="@+id/couleur"
-        android:layout_above="@+id/teinte"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:text="Choix teinte"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/teinte"
-        android:layout_below="@+id/HE"
-        android:layout_alignRight="@+id/gris"
-        android:layout_alignEnd="@+id/gris" />
-
-    <Button
-        android:text="Changer l'image en noir et blanc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/gris"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/aide_gris"
-        android:layout_toStartOf="@+id/aide_gris"/>
+        android:layout_above="@+id/ED"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="Mettre un filtre de couleur aléatoire sur l'image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/filtre"
+        android:layout_above="@+id/color"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Modifier la couleur, la luminosité et la saturation de l'image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/color"
+        android:layout_below="@+id/grey"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:text="Égalisation d'histogramme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/HE"
-        android:layout_below="@+id/couleur"
+        android:layout_below="@+id/color"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/conv"
-        android:layout_toEndOf="@+id/conv" />
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="Sépia"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/sepia"
+        android:layout_below="@+id/HE"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="Déformer l'image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ppv"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="40dp" />
+
+    <Button
+        android:text="Convolution"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:id="@+id/conv"
+        android:layout_below="@+id/sepia"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+    <!--android:layout_below="@+id/aide_gris"-->
+
 </RelativeLayout>
+
