--- a/app/src/main/res/layout/activity_gray_menu.xml
+++ b/app/src/main/res/layout/activity_gray_menu.xml
@@ -56,4 +56,28 @@
         </ImageView>
     </ScrollView>
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/tb"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
+
+    <!--
+    <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+
+
+        <item
+            android:id="@+id/action_favorite"
+            android:icon="@drawable/ic_favorite_black_48dp"
+            android:title="@string/action_favorite"
+            tools:showAsAction="ifRoom"/>
+
+        <item android:id="@+id/action_settings"
+            android:title="@string/action_settings"
+            tools:showAsAction="never"/>
+
+    </menu-->
+
 </RelativeLayout>
