--- a/app/src/main/res/layout/activity_gray_menu.xml
+++ b/app/src/main/res/layout/activity_gray_menu.xml
@@ -42,8 +42,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/grey"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="16dp">
+        android:layout_alignParentStart="true">
         <ImageView
             android:id="@+id/picture"
             android:layout_width="fill_parent"
@@ -56,13 +55,6 @@
         </ImageView>
     </ScrollView>
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/tb"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
 
     <!--
     <menu xmlns:android="http://schemas.android.com/apk/res/android" >
