--- a/app/src/main/res/layout/activity_filter_menu.xml
+++ b/app/src/main/res/layout/activity_filter_menu.xml
@@ -11,20 +11,11 @@
     tools:context="com.example.emmaveillat.finalproject.FilterMenu">
 
     <Button
-        android:text="Annuler les modifications"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/reset"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:text="Changer mon image de couleur !"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/color"
-        android:layout_above="@+id/save"
+        android:text="Annuler les modifications"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -37,22 +28,41 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <TextView
+        android:id="@+id/texthue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hue"
+        android:layout_above="@+id/huebar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <SeekBar
+        android:id="@+id/huebar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="360"
+        android:progress="0"
+        android:layout_above="@+id/save"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/color"
+        android:layout_above="@+id/texthue"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="19dp">
+        android:layout_alignParentStart="true">
         <ImageView
-            android:id="@+id/picture"
-            android:layout_width="fill_parent"
+            android:id="@+id/result"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_above="@+id/color"
+            android:adjustViewBounds="true"
+            android:background="@android:color/background_light"
+            android:scaleType="centerInside"
+            android:layout_above="@+id/texthue"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="37dp">
+            android:layout_alignParentStart="true" >
         </ImageView>
     </ScrollView>
 
