Cartoon convenable, à revoir peut être

--- a/app/src/main/res/layout/activity_convolution_menu.xml
+++ b/app/src/main/res/layout/activity_convolution_menu.xml
@@ -32,7 +32,7 @@
         android:layout_alignParentEnd="true" />
 
     <TextView
-        android:text="Facteur longueur :"
+        android:text="Paramètre filtre moyenneur :"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/facX"
